fixed cramped margins on articles with supa sized headlines

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -27,5 +27,5 @@ article
       h1::after
         content: '\00A0\2014\020'
 
-  .datestamp
-    font-style: italic
+  p.supa
+    margin-top: var(--spacer)
